feat: marca tarefa como concluida ao clicar

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,10 @@ form input {
     }
 
 }
+
+/* estilização de tarefas concluídas */
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.6;
+}
